Adventure and Epic modes added

--- a/index.html
+++ b/index.html
@@ -73,6 +73,66 @@
       </div> <!-- .image-caption -->
     </div> <!-- .image-footer -->
   </li>
+  <li class="octocat">
+    <a href="https://octodex.github.com/suftocat">
+      <img src="https://octodex.github.com/images/surftocat.png" />
+    </a>
+    <div class="image-footer">
+      <span class="image-number">112</span>
+      <div class="image-caption">
+        <span>the</span>
+        <a href="https://octodex.github.com/suftocat">Surftocat</a>
+        <span>by</span>
+        <ul class="authors">
+          <li>
+            <a href="https://github.com/jeejkang">
+              <img src="https://github.com/jeejkang.png" />
+            </a>
+          </li>
+        </ul>
+      </div> <!-- .image-caption -->
+    </div> <!-- .image-footer -->
+  </li>
+  <li class="octocat">
+    <a href="https://octodex.github.com/octobiwan">
+      <img src="https://octodex.github.com/images/octobiwan.jpg" />
+    </a>
+    <div class="image-footer">
+      <span class="image-number">111</span>
+      <div class="image-caption">
+        <span>the</span>
+        <a href="https://octodex.github.com/octobiwan">Octobi Wan Catnobi</a>
+        <span>by</span>
+        <ul class="authors">
+          <li>
+            <a href="https://github.com/cameronmcefee">
+              <img src="https://avatars2.githubusercontent.com/u/72919?s=400&v=4" />
+            </a>
+          </li>
+        </ul>
+      </div> <!-- .image-caption -->
+    </div> <!-- .image-footer -->
+  </li>
+  <li class="octocat">
+    <a href="https://octodex.github.com/daftpunktocat-guy">
+      <img src="https://octodex.github.com/images/daftpunktocat-guy.gif" />
+    </a>
+    <div class="image-footer">
+      <span class="image-number">110</span>
+      <div class="image-caption">
+        <span>the</span>
+        <a href="https://octodex.github.com/daftpunktocat-guy">Daftpunktocat-Guy</a>
+        <span>by</span>
+        <ul class="authors">
+          <li>
+            <a href="https://github.com/jeejkang">
+              <img src="https://github.com/jeejkang.png"/>
+            </a>
+          </li>
+        </ul>
+      </div> <!-- .image-caption -->
+    </div> <!-- .image-footer -->
+  </li>
 </ul>
 </body>
 </html>
